<?xml version="1.0" encoding="utf-8"?>

<ScrollView android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android" >

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".excofullpage">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:background="#4fc3f7">

        <LinearLayout
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_height="match_parent"
            android:background="@drawable/button_in_main"
            android:orientation="vertical"
            android:padding="15dp"
            android:layout_margin="15dp"
            >

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="fitCenter"
                android:id="@+id/excoimgv"
                android:src="@drawable/vp_photo"

                />



        </LinearLayout>



    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="horizontal"
        android:background="#4fc3f7">

        <LinearLayout
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_height="match_parent"
            android:background="@drawable/button_in_main"
            android:orientation="vertical"
            android:padding="15dp"
            android:layout_margin="15dp"
            >



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="15dp"
                android:orientation="horizontal">


                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="horizontal">
                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:textSize="20sp"
                            android:textStyle="bold"
                            android:fontFamily="sans-serif-condensed-light"
                            android:text="@string/name" />
                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="3"
                            android:textSize="20sp"
                            android:id="@+id/exconametv"
                            android:textStyle="bold"
                            android:fontFamily="sans-serif-condensed-light"
                            android:text="@string/pre_name"/>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="horizontal">
                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:textSize="20sp"
                            android:textStyle="bold"
                            android:fontFamily="sans-serif-condensed-light"
                            android:text="@string/DOB"/>
                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="3"
                            android:textSize="20sp"
                            android:id="@+id/excodobtv"
                            android:textStyle="bold"
                            android:fontFamily="sans-serif-condensed-light"
                            android:text="@string/pre_DOB"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="horizontal">
                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:textSize="20sp"
                            android:textStyle="bold"
                            android:fontFamily="sans-serif-condensed-light"
                            android:text="@string/Level"/>
                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="3"
                            android:textSize="20sp"
                            android:id="@+id/excolvltv"
                            android:textStyle="bold"
                            android:fontFamily="sans-serif-condensed-light"
                            android:text="@string/pre_Level"/>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="horizontal">
                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:textSize="20sp"
                            android:textStyle="bold"
                            android:fontFamily="sans-serif-condensed-light"
                            android:text="@string/Post"/>
                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="3"
                            android:textSize="20sp"
                            android:id="@+id/excoposttv"
                            android:textStyle="bold"
                            android:fontFamily="sans-serif-condensed-light"
                            android:text="@string/pre_Post"/>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="horizontal">
                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:textSize="20sp"
                            android:textStyle="bold"
                            android:fontFamily="sans-serif-condensed-light"
                            android:text="@string/Religion" />
                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="3"
                            android:textSize="20sp"
                            android:id="@+id/excorelitv"
                            android:textStyle="bold"
                            android:fontFamily="sans-serif-condensed-light"
                            android:text="@string/pre_Religion"/>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="horizontal">
                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:textSize="20sp"
                            android:textStyle="bold"
                            android:fontFamily="sans-serif-condensed-light"
                            android:text="@string/State"/>
                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="3"
                            android:textSize="20sp"
                            android:id="@+id/excostatetv"
                            android:textStyle="bold"
                            android:fontFamily="sans-serif-condensed-light"
                            android:text="@string/pre_State"/>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="horizontal">
                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:textSize="20sp"
                            android:textStyle="bold"
                            android:fontFamily="sans-serif-condensed-light"
                            android:text="@string/email"/>
                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="3"
                            android:textSize="20sp"
                            android:id="@+id/excoemailtv"
                            android:textStyle="bold"
                            android:fontFamily="sans-serif-condensed-light"
                            android:text="@string/pre_email"/>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="horizontal">
                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:textSize="20sp"
                            android:textStyle="bold"
                            android:fontFamily="sans-serif-condensed-light"
                            android:text="@string/phone"/>
                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="3"
                            android:textSize="20sp"
                            android:id="@+id/excophnetv"
                            android:textStyle="bold"
                            android:fontFamily="sans-serif-condensed-light"
                            android:text="@string/pre_phone"/>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="horizontal">
                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:textSize="20sp"
                            android:textStyle="bold"
                            android:fontFamily="sans-serif-condensed-light"
                            android:text="@string/ig"/>
                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="3"
                            android:textSize="20sp"
                            android:id="@+id/excoigtv"
                            android:textStyle="bold"
                            android:fontFamily="sans-serif-condensed-light"
                            android:text="@string/pre_ig"/>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:textSize="20sp"
                            android:textStyle="bold"
                            android:fontFamily="sans-serif-condensed-light"
                            android:text="@string/remark"/>
                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="3"
                            android:textSize="20sp"
                            android:id="@+id/excoremtv"
                            android:textStyle="bold"
                            android:fontFamily="sans-serif-condensed-light"
                            android:text="@string/pre_remark"/>
                    </LinearLayout>

                </LinearLayout>



            </LinearLayout>



        </LinearLayout>



    </LinearLayout>

</LinearLayout>
</ScrollView>