<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/profpic"
            android:layout_margin="20dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed"
            android:paddingLeft="24dp"
            android:paddingTop="15dp"
            android:text="@string/firstname"
            android:textColor="#000000"
            android:textSize="20sp" />



            <EditText
                android:id="@+id/f_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:maxLines="1"
                android:inputType="text"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="15dp"
                android:background="@drawable/text_field_clicked"
                android:hint="Bob"
                android:padding="15dp" />



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed"
            android:paddingLeft="24dp"
            android:text="@string/surname"
            android:textColor="#000000"
            android:textSize="20sp"

            />


            <EditText
                android:id="@+id/s_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:maxLines="1"
                android:inputType="text"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="15dp"
                android:background="@drawable/text_field_clicked"
                android:hint="Marley"
                android:padding="15dp" />



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed"
            android:paddingLeft="24dp"
            android:text="@string/Level"
            android:textColor="#000000"
            android:textSize="20sp"

            />



            <Spinner
                android:id="@+id/spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="15dp"
                android:padding="15dp" />



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed"
            android:paddingLeft="24dp"

            android:text="@string/matric"
            android:textColor="#000000"
            android:textSize="20sp"

            />


            <EditText
                android:id="@+id/matric"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:maxLines="1"
                android:inputType="number"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="15dp"
                android:background="@drawable/text_field_clicked"
                android:hint="121238902"
                android:padding="15dp" />



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed"
            android:paddingLeft="24dp"
            android:text="@string/e_mail"
            android:textColor="#000000"
            android:textSize="20sp"

            />



            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:maxLines="1"
                android:inputType="textEmailAddress"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="15dp"
                android:background="@drawable/text_field_clicked"
                android:hint="abc@xyz.com"
                android:padding="15dp" />



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed"
            android:paddingLeft="24dp"
            android:text="@string/password"
            android:textColor="#000000"
            android:textSize="20sp"

            />



        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:maxLines="1"
            android:inputType="textPassword"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/text_field_clicked"
            android:hint="*******"
            android:padding="15dp" />




        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/create"
                android:id="@+id/register"
                android:layout_centerVertical="true"
                android:layout_margin="12dp"
                android:layout_alignParentBottom="true"
                android:background="@drawable/button"
                android:fontFamily="sans-serif-medium"
                android:textSize="15sp"/>
        </RelativeLayout>
    </LinearLayout>


</ScrollView>